fixed the always-visible scrollbar

--- a/public/stylesheets/common/ie.css
+++ b/public/stylesheets/common/ie.css
@@ -1,3 +1,7 @@
+html {
+  overflow: auto;
+}
+
 a {
   color: #254555;
 }
